# brainfetch

./: Cargo.toml  README.md  memory_dump.csv
docs/: commands.md
src/: bf.b  brain_fetch_interpreter.rs  gen_code.rs  lib.rs  main.rs
tests/: interpreter_tests.rs
