[package]
name = "brainfetch_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for my Brainfuck deriviation with support for fetching from apis with a few other helper commands."
repository = "https://github.com/packjackisback/brainfetch"
readme = "https://github.com/packjackisback/brainfetch/README.md"
[dependencies]
reqwest = "0.12.12"

[lib]
name = "brainfetch_lib"
path = "src/lib.rs"